--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,10 @@
     margin-bottom: 20px;
 }
 
+#add-project-button {
+    margin-bottom: 20px;
+}
+
 .add-project-popup {
     position: absolute;
     top: 50vh;
@@ -57,8 +61,22 @@
 }
 
 .projects {
+    display: flex;
+    flex-direction: column;
     border: 2px solid blue;
     height: 200px;
-    gap: 30px;
-    font-size: 20px;
+}
+
+.project-title {
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 10px;
+}
+
+.project-item-array {
+    font-size: 22px;
+}
+
+#project-list-item {
+    margin-bottom: 10px;
 }
