--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,17 @@
     border: 2px solid black;
     display: grid;
     justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 400px));
+}
+
+.project-item-container {
+    font-size: 25px;
+    /* overflow: hidden;
+    text-overflow: ellipsis;
+    overflow-wrap: break-word; */
+    border: 2px solid yellow;
+    display: grid;
+    justify-content: center;
     grid-template-columns: repeat(auto-fit, minmax(250px, 350px));
 }
 
@@ -66,7 +77,7 @@
     display: flex;
     flex-direction: column;
     border: 2px solid blue;
-    height: 200px;
+    height: 250px;
 }
 
 .project-title {
