add item list set to invis by default

--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,10 @@
     justify-content: center;
 }
 
+.add-list-popup {
+    display: none;
+}
+
 #add-project-form {
     display: flex;
     flex-direction: column;
