--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,7 @@
     height: 400px;
     padding: 1em 2em;
     border-radius: 10px;
+    border: 3px solid green;
 }
 
 #add-project-popup:target {
