--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,6 @@
     font-size: 20px;
 }
 
-/**Setting relative position allows other elements, e.g. our add-list-item, to be set via absolute*/
 .projects {
     display: flex;
     flex-direction: column;
@@ -101,6 +100,14 @@
     text-align: center;
     font-size: 36px;
     margin-bottom: 10px;
+}
+
+/*Absolute position only works relative to parent if parent position also set*/
+#add-list-button {
+    width: 30px;
+    background-color: white;
+    margin-top: auto;
+    margin-left: auto;
 }
 
 .project-item-array {
